@@ -1,3 +1,8 @@
+2019-09-07 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/pdk/gen.c:
+	  Improve subtraction flexibility.
+
 2019-09-06 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
 
 	* src/pdk/gen.c:
